--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ body{
 .welcome-container .subwelcome{
   text-align: center;
   padding-bottom: 10%;
+  
 
 }
 .welcome {
@@ -634,4 +635,9 @@ a{
 color: inherit; /* Inherits color from the parent element */
   text-decoration: none; /* Removes underline */}
 
-  /*...............CHAT....CSS..........................*/
+  /*...............VIDEBACKGROUND...CSS..........................*/
+ 
+  
+  
+ 
+  
